@@ -3566,9 +3566,9 @@ ecoff_link_add_archive_symbols (abfd, info)
 	     entry if it is the tail, because that would lose any
 	     entries we add to the list later on.  */
 	  if (*pundef != info->hash->undefs_tail)
-	    *pundef = (*pundef)->next;
+	    *pundef = (*pundef)->und_next;
 	  else
-	    pundef = &(*pundef)->next;
+	    pundef = &(*pundef)->und_next;
 	  continue;
 	}
 
@@ -3578,7 +3578,7 @@ ecoff_link_add_archive_symbols (abfd, info)
 	 other object format.  */
       if (h->type != bfd_link_hash_undefined)
 	{
-	  pundef = &(*pundef)->next;
+	  pundef = &(*pundef)->und_next;
 	  continue;
 	}
 
@@ -3590,7 +3590,7 @@ ecoff_link_add_archive_symbols (abfd, info)
       if (file_offset == 0)
 	{
 	  /* Nothing in this slot.  */
-	  pundef = &(*pundef)->next;
+	  pundef = &(*pundef)->und_next;
 	  continue;
 	}
 
@@ -3621,7 +3621,7 @@ ecoff_link_add_archive_symbols (abfd, info)
 
 	  if (! found)
 	    {
-	      pundef = &(*pundef)->next;
+	      pundef = &(*pundef)->und_next;
 	      continue;
 	    }
 
@@ -3643,7 +3643,7 @@ ecoff_link_add_archive_symbols (abfd, info)
       if (! ecoff_link_add_object_symbols (element, info))
 	return FALSE;
 
-      pundef = &(*pundef)->next;
+      pundef = &(*pundef)->und_next;
     }
 
   return TRUE;
